Versão inicial 1.0.0
- Ajustes das configurações do swagger nos constrollers

- Ajustado o agrupamento das tags do swagger

- Adicionado classe InicializacaoProdEnv onde cria o primeiro usuario admin no ambiente de produção

- Ajustes nos arquivos .properties

- Alterado o diretório onde serão salvos os arquivos de Produto, Pedido e Foto de perfil dos clientes

- Adicionado arquivos Docker na pasta /build/

- Atualizado o Read.me

- Atualizado pom.xml para versão e descrição adequada do projeto